/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package ar.edu.utn.tup.tp5.ej11;

/**
 *
 * @author DELL
 */
public class Reproductor {
    public void reproducir(Cancion cancion) {
        System.out.println("▶ Reproduciendo: " + cancion.getTitulo() +
                " - Artista: " + cancion.getArtista().getNombre());
    }
}
